-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-08-29T12:16:14.640Z

CREATE TABLE "usuario" (
  "id_usuario" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" varchar NOT NULL,
  "login" varchar NOT NULL,
  "senha" varchar(10) NOT NULL,
  "nivel" varchar NOT NULL DEFAULT 'admin',
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "categoria_despesa" (
  "id_categoria_despesa" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar NOT NULL,
  "fl_fixo" boolean NOT NULL DEFAULT false,
  "valor_fixo_categoria_despesa" numeric(15,2) NOT NULL DEFAULT 0,
  "id_usuario" bigint NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "categoria_receita" (
  "id_categoria_receita" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar NOT NULL,
  "fl_fixo" boolean NOT NULL DEFAULT false,
  "valor_fixo_categoria_receita" numeric(15,2) NOT NULL DEFAULT 0,
  "id_usuario" bigint NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "competencia" (
  "id_competencia" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "mes" integer NOT NULL,
  "exercicio" integer NOT NULL,
  "id_usuario" bigint NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "banco" (
  "id_banco" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar NOT NULL,
  "codigo_banco" varchar NOT NULL DEFAULT '',
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "tipo_carteira" (
  "id_tipo_carteira" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "carteira" (
  "id_carteira" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_banco" bigint,
  "nome" varchar NOT NULL,
  "id_tipo_carteira" bigint NOT NULL,
  "saldo_inicial" numeric(15,2) NOT NULL DEFAULT 0,
  "saldo_atual" numeric(15,2) NOT NULL DEFAULT 0,
  "id_usuario" bigint NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "cartao_credito" (
  "id_cartao_credito" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_banco" bigint,
  "nome" varchar NOT NULL,
  "limite_total" numeric(15,2) NOT NULL DEFAULT 0,
  "limite_atual" numeric(15,2) NOT NULL DEFAULT 0,
  "fl_cartao_credito_ativo" boolean NOT NULL DEFAULT true,
  "id_usuario" bigint NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "fatura_cartao_credito" (
  "id_fatura_cartao_credito" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_cartao_credito" bigint NOT NULL,
  "id_competencia" bigint NOT NULL,
  "valor_fatura_cartao_credito" numeric(15,2) NOT NULL DEFAULT 0,
  "fl_fatura_cartao_credito_fechada" boolean NOT NULL DEFAULT false,
  "data_fechamento_fatura_cartao_credito" date,
  "id_usuario" bigint NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "tipo_transferencia_financeira" (
  "id_tipo_transferencia_financeira" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "transferencia_financeira" (
  "id_transferencia_financeira" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_tipo_transferencia_financeira" bigint NOT NULL,
  "data_transferencia" date NOT NULL DEFAULT 'now()',
  "descricao_transferencia" varchar NOT NULL DEFAULT '',
  "valor_transferencia" numeric(15,2) NOT NULL DEFAULT 0,
  "id_carteira_origem" bigint,
  "id_carteira_destino" bigint,
  "id_usuario" bigint NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "tipo_lancamento_financeiro" (
  "id_tipo_lancamento_financeiro" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar NOT NULL,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "lancamento_financeiro" (
  "id_lancamento_financeiro" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" bigint NOT NULL,
  "data_lancamento_financeiro" date NOT NULL DEFAULT 'now()',
  "id_tipo_lancamento_financeiro" bigint NOT NULL,
  "id_competencia" bigint,
  "id_fatura_cartao_credito" bigint,
  "id_carteira" bigint,
  "id_categoria_receita" bigint,
  "id_categoria_despesa" bigint,
  "id_transferencia_financeira" bigint,
  "descricao" varchar NOT NULL DEFAULT 'Lançamento financeiro',
  "valor_lancamento_financeiro" numeric(15,2) NOT NULL DEFAULT 0,
  "fl_parcelado" boolean NOT NULL DEFAULT false,
  "numero_parcela" int,
  "total_parcelas" int,
  "fl_fixo" boolean NOT NULL DEFAULT false,
  "fl_efetivada" boolean NOT NULL DEFAULT false,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "meta_financeira" (
  "id_meta_financeira" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" bigint NOT NULL,
  "nome" varchar NOT NULL,
  "descricao" varchar,
  "valor_meta" numeric(15,2) NOT NULL,
  "valor_atual" numeric(15,2) NOT NULL DEFAULT 0,
  "data_inicio" date NOT NULL DEFAULT 'now()',
  "data_fim" date,
  "fl_atingida" boolean NOT NULL DEFAULT false,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "parcela_lancamento" (
  "id_parcela_lancamento" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_lancamento_financeiro" bigint NOT NULL,
  "numero_parcela" int NOT NULL,
  "total_parcelas" int NOT NULL,
  "valor_parcela" numeric(15,2) NOT NULL,
  "data_vencimento" date NOT NULL,
  "fl_pago" boolean NOT NULL DEFAULT false,
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "investimento" (
  "id_investimento" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" bigint NOT NULL,
  "nome" varchar NOT NULL,
  "tipo" varchar NOT NULL,
  "valor_inicial" numeric(15,2) NOT NULL,
  "valor_atual" numeric(15,2) NOT NULL,
  "data_inicio" date NOT NULL DEFAULT 'now()',
  "data_resgate" date,
  "rendimento_percentual" numeric(5,2),
  "criado_em" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE TABLE "alerta_financeiro" (
  "id_alerta_financeiro" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_usuario" bigint NOT NULL,
  "tipo_alerta" varchar NOT NULL,
  "mensagem" varchar NOT NULL,
  "data_alerta" timestamptz NOT NULL DEFAULT 'now()',
  "fl_lido" boolean NOT NULL DEFAULT false
);

CREATE TABLE "auditoria" (
  "id_auditoria" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "tabela" varchar NOT NULL,
  "id_registro" bigint NOT NULL,
  "acao" varchar NOT NULL,
  "id_usuario" bigint,
  "data_auditoria" timestamptz NOT NULL DEFAULT 'now()',
  "dados_antigos" jsonb,
  "dados_novos" jsonb,
  "descricao" varchar
);

CREATE TABLE "historico_carteira" (
  "id_historico_carteira" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_carteira" bigint NOT NULL,
  "saldo_inicial" numeric(15,2) NOT NULL,
  "saldo_atual" numeric(15,2) NOT NULL,
  "id_usuario" bigint,
  "data_movimentacao" timestamptz NOT NULL DEFAULT 'now()',
  "descricao" varchar
);

CREATE TABLE "historico_lancamento_financeiro" (
  "id_historico_lancamento" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_lancamento_financeiro" bigint NOT NULL,
  "valor_lancamento" numeric(15,2) NOT NULL,
  "id_usuario" bigint,
  "acao" varchar NOT NULL,
  "data_movimentacao" timestamptz NOT NULL DEFAULT 'now()',
  "descricao" varchar
);

CREATE TABLE "historico_fatura_cartao" (
  "id_historico_fatura" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "id_fatura_cartao_credito" bigint NOT NULL,
  "valor_fatura" numeric(15,2) NOT NULL,
  "fl_fatura_fechada" boolean NOT NULL,
  "data_fechamento" date,
  "id_usuario" bigint,
  "acao" varchar NOT NULL,
  "data_movimentacao" timestamptz NOT NULL DEFAULT 'now()'
);

CREATE UNIQUE INDEX ON "usuario" ("email");

CREATE UNIQUE INDEX ON "usuario" ("login");

CREATE UNIQUE INDEX ON "categoria_despesa" ("nome", "id_usuario");

CREATE UNIQUE INDEX ON "categoria_receita" ("nome", "id_usuario");

CREATE UNIQUE INDEX ON "competencia" ("mes", "exercicio", "id_usuario");

CREATE UNIQUE INDEX ON "fatura_cartao_credito" ("id_cartao_credito", "id_competencia");

ALTER TABLE "categoria_despesa" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "categoria_receita" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "competencia" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "carteira" ADD FOREIGN KEY ("id_tipo_carteira") REFERENCES "tipo_carteira" ("id_tipo_carteira");

ALTER TABLE "carteira" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "carteira" ADD FOREIGN KEY ("id_banco") REFERENCES "banco" ("id_banco");

ALTER TABLE "cartao_credito" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "cartao_credito" ADD FOREIGN KEY ("id_banco") REFERENCES "banco" ("id_banco");

ALTER TABLE "fatura_cartao_credito" ADD FOREIGN KEY ("id_cartao_credito") REFERENCES "cartao_credito" ("id_cartao_credito");

ALTER TABLE "fatura_cartao_credito" ADD FOREIGN KEY ("id_competencia") REFERENCES "competencia" ("id_competencia");

ALTER TABLE "fatura_cartao_credito" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "transferencia_financeira" ADD FOREIGN KEY ("id_tipo_transferencia_financeira") REFERENCES "tipo_transferencia_financeira" ("id_tipo_transferencia_financeira");

ALTER TABLE "transferencia_financeira" ADD FOREIGN KEY ("id_carteira_origem") REFERENCES "carteira" ("id_carteira");

ALTER TABLE "transferencia_financeira" ADD FOREIGN KEY ("id_carteira_destino") REFERENCES "carteira" ("id_carteira");

ALTER TABLE "transferencia_financeira" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "lancamento_financeiro" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "lancamento_financeiro" ADD FOREIGN KEY ("id_tipo_lancamento_financeiro") REFERENCES "tipo_lancamento_financeiro" ("id_tipo_lancamento_financeiro");

ALTER TABLE "lancamento_financeiro" ADD FOREIGN KEY ("id_competencia") REFERENCES "competencia" ("id_competencia");

ALTER TABLE "lancamento_financeiro" ADD FOREIGN KEY ("id_fatura_cartao_credito") REFERENCES "fatura_cartao_credito" ("id_fatura_cartao_credito");

ALTER TABLE "lancamento_financeiro" ADD FOREIGN KEY ("id_carteira") REFERENCES "carteira" ("id_carteira");

ALTER TABLE "lancamento_financeiro" ADD FOREIGN KEY ("id_categoria_receita") REFERENCES "categoria_receita" ("id_categoria_receita");

ALTER TABLE "lancamento_financeiro" ADD FOREIGN KEY ("id_categoria_despesa") REFERENCES "categoria_despesa" ("id_categoria_despesa");

ALTER TABLE "lancamento_financeiro" ADD FOREIGN KEY ("id_transferencia_financeira") REFERENCES "transferencia_financeira" ("id_transferencia_financeira");

ALTER TABLE "meta_financeira" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "parcela_lancamento" ADD FOREIGN KEY ("id_lancamento_financeiro") REFERENCES "lancamento_financeiro" ("id_lancamento_financeiro");

ALTER TABLE "investimento" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "alerta_financeiro" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "auditoria" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "historico_carteira" ADD FOREIGN KEY ("id_carteira") REFERENCES "carteira" ("id_carteira");

ALTER TABLE "historico_carteira" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "historico_lancamento_financeiro" ADD FOREIGN KEY ("id_lancamento_financeiro") REFERENCES "lancamento_financeiro" ("id_lancamento_financeiro");

ALTER TABLE "historico_lancamento_financeiro" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");

ALTER TABLE "historico_fatura_cartao" ADD FOREIGN KEY ("id_fatura_cartao_credito") REFERENCES "fatura_cartao_credito" ("id_fatura_cartao_credito");

ALTER TABLE "historico_fatura_cartao" ADD FOREIGN KEY ("id_usuario") REFERENCES "usuario" ("id_usuario");
